kong-demo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - http:
      paths:
      - path: /foo
        backend:
          serviceName: echo
          servicePort: 80
      - path: /auth
        backend:
          serviceName: hydra-service
          servicePort: 9000
      - path: /auth-admin
        backend:
          serviceName: hydra-service
          servicePort: 9001
      - path: /
        backend:
          serviceName: konga-service
          servicePort: 1337
      # - path: /
      #   backend:
      #     serviceName: jaeger-query
      #     servicePort: 80
      # - path: /auth-admin
      #   backend:
      #     serviceName: hydra-service
      #     servicePort: 9001
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: demo
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
#     # kubernetes.io/ingress.class: kong
# spec:
#   rules:
#   - http:
#       paths:
#       - path: /foo(/|$)(.*)
#         backend:
#           serviceName: echo
#           servicePort: 80
#       - path: /auth
#         backend:
#           serviceName: hydra-service
#           servicePort: 9000
#       # - path: /auth-admin
#       #   backend:
#       #     serviceName: hydra-service
#       #     servicePort: 9001
